--- a/src/blocks/modules/aside/_aside.html
+++ b/src/blocks/modules/aside/_aside.html
@@ -24,12 +24,7 @@
             </li>
             <li class="aside__menu-item">
                 <a class="aside__menu-link" href="#">
-                    Создание сайтов на 
-                </a>
-            </li>
-            <li class="aside__menu-item">
-                <a class="aside__menu-link" href="#">
-                    Wordpress
+                    Создание сайтов на Wordpress
                 </a>
             </li>
             <li class="aside__menu-item">
