--- a/src/blocks/modules/content/_content.html
+++ b/src/blocks/modules/content/_content.html
@@ -35,18 +35,21 @@
         </p>
     </div>
     <div class="content__item content__cards grid">
-        <div class="content__cards-item"></div>
-        <div class="content__cards-item"></div>
-        <div class="content__cards-item"></div>
-        <div class="content__cards-item"></div>
-        <div class="content__cards-item"></div>
-        <div class="content__cards-item"></div>
-        <div class="content__cards-item"></div>
+        <div class="content__card"></div>
+        <div class="content__card"></div>
+        <div class="content__card"></div>
+        <div class="content__card"></div>
+        <div class="content__card"></div>
+        <div class="content__card"></div>
+        <div class="content__card"></div>
     </div>
     <div class="content__item content__text-item">
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
+        sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
+        nec, pellentesque eu, pretium quis, sem.
     </div>
     <div class="content__item content__text-item">
-        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
+        sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
     </div>
 </main>
