--- a/src/blocks/modules/footer/_footer.html
+++ b/src/blocks/modules/footer/_footer.html
@@ -1,6 +1,6 @@
 <footer class="footer grid">
     <div class="footer__item">
-        <ul class="footer__menu-list flex">
+        <ol class="footer__menu-list flex">
             <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Пункт 01</a>
             </li>
@@ -43,7 +43,7 @@
             <li class="footer__menu-item">
                 <a class="footer__menu-link" href="#">Пункт 14</a>
             </li>
-        </ul>
+        </ol>
     </div>
     <div class="footer__item">
         <ul class="footer__sale-list">
