--- a/src/blocks/modules/header/_header.html
+++ b/src/blocks/modules/header/_header.html
@@ -1,91 +1,89 @@
 <header class="header flex">
-    <div class="header__item header__left-item">
+    <div class="header__item">
         <div class="hamburger-btn">
             <span class="hamburger-btn__item"></span>
             <span class="hamburger-btn__item"></span>
             <span class="hamburger-btn__item"></span>
         </div>
     </div>
-    <div class="header__item header__center-item"></div>
-    <div class="header__item header__right-item flex">
-        <div class="header__contact flex">
-            <a class="header__contact-link" href="tel:+375293711041">
-                +375 (29) 371-10-41    
-            </a>
-            <a class="header__contact-link" href="mailto:info@increase.by">
-                <span>info@increase.by</span>
-            </a>
-            <a class="header__contact-link" href="www.increase.by">
-                <span>www.increase.by</span>
-            </a>
-        </div>
-    </div>
+    <div class="header__item"></div>
+    <address class="header__item flex">
+        <a class="header__contact-link" href="tel:+375293711041">
+            +375 (29) 371-10-41
+        </a>
+        <a class="header__contact-link" href="mailto:info@increase.by">
+            <span>info@increase.by</span>
+        </a>
+        <a class="header__contact-link" href="www.increase.by">
+            <span>www.increase.by</span>
+        </a>
+    </address>
 
     <div class="burger-menu">
         <div class="burger-menu__close">&times;</div>
         <h1 class="title aside__title">Создание сайтов</h1>
         <nav class="aside__menu">
-                <ul class="aside__menu-list">
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            Изготовление сайтов «под ключ»
-                        </a>
-                    </li>
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            Как мы работаем
-                        </a>
-                    </li>
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            Интеграция с amoCrm
-                        </a>
-                    </li>
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            Поддержка сайтов
-                        </a>
-                    </li>
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            Создание сайтов на 
-                        </a>
-                    </li>
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            Wordpress
-                        </a>
-                    </li>
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            Дизайн сайтов
-                        </a>
-                    </li>
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            Редизайн сайтов
-                        </a>
-                    </li>
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            Интернет-магазины
-                        </a>
-                    </li>
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            Создание логотипов
-                        </a>
-                    </li>
-                    <li class="aside__menu-item">
-                        <a class="aside__menu-link" href="#">
-                            FAQ
-                        </a>
-                    </li>
-                </ul>
+            <ul class="aside__menu-list">
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        Изготовление сайтов «под ключ»
+                    </a>
+                </li>
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        Как мы работаем
+                    </a>
+                </li>
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        Интеграция с amoCrm
+                    </a>
+                </li>
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        Поддержка сайтов
+                    </a>
+                </li>
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        Создание сайтов на
+                    </a>
+                </li>
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        Wordpress
+                    </a>
+                </li>
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        Дизайн сайтов
+                    </a>
+                </li>
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        Редизайн сайтов
+                    </a>
+                </li>
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        Интернет-магазины
+                    </a>
+                </li>
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        Создание логотипов
+                    </a>
+                </li>
+                <li class="aside__menu-item">
+                    <a class="aside__menu-link" href="#">
+                        FAQ
+                    </a>
+                </li>
+            </ul>
         </nav>
-        <div class="header__contact flex">
+        <address class="header__contact">
             <a class="header__contact-link" href="tel:+375293711041">
-                +375 (29) 371-10-41    
+                +375 (29) 371-10-41
             </a>
             <a class="header__contact-link" href="mailto:info@increase.by">
                 <span>info@increase.by</span>
@@ -93,6 +91,6 @@
             <a class="header__contact-link" href="www.increase.by">
                 <span>www.increase.by</span>
             </a>
-        </div>
+        </address>
     </div>
 </header>
